user roles refactor